--- a/ClassifySpaceRockCode.ipynb
+++ b/ClassifySpaceRockCode.ipynb
@@ -75,9 +75,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compose(\n",
+      "    RandomResizedCrop(size=(224, 224), scale=(0.08, 1.0), ratio=(0.75, 1.3333), interpolation=bilinear)\n",
+      "    Resize(size=224, interpolation=bilinear, max_size=None, antialias=None)\n",
+      "    ToTensor()\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "# 설정한 이미지 데이터 변환 방법을 출력하여 확인한다.\n",
     "print(t_transforms)"
@@ -109,9 +121,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset ImageFolder\n",
+      "    Number of datapoints: 155\n",
+      "    Root location: ./data\n",
+      "    StandardTransform\n",
+      "Transform: Compose(\n",
+      "               RandomResizedCrop(size=(224, 224), scale=(0.08, 1.0), ratio=(0.75, 1.3333), interpolation=bilinear)\n",
+      "               Resize(size=224, interpolation=bilinear, max_size=None, antialias=None)\n",
+      "               ToTensor()\n",
+      "           )\n",
+      "155 155\n"
+     ]
+    }
+   ],
    "source": [
     "# datasets.ImageFolder를 사용해서 학습 데이터(train_data)와 테스트 데이터(test_data)를 만든다.\n",
     "train_data = datasets.ImageFolder(data_dir, transform=t_transforms)\n",
@@ -134,9 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154]\n",
+      "[135, 69, 133, 121, 95, 151, 132, 21, 83, 47, 115, 16, 27, 127, 24, 20, 77, 35, 76, 58, 80, 9, 147, 55, 109, 37, 119, 48, 65, 91, 64, 39, 92, 5, 59, 60, 33, 10, 136, 54, 2, 51, 89, 6, 84, 114, 73, 67, 71, 153, 26, 82, 99, 134, 124, 70, 56, 25, 102, 3, 131, 85, 154, 45, 57, 79, 152, 81, 12, 41, 23, 103, 118, 137, 0, 87, 142, 129, 31, 74, 28, 62, 40, 113, 34, 108, 49, 145, 98, 53, 7, 42, 122, 30, 61, 14, 50, 100, 46, 112, 93, 141, 13, 32, 107, 130, 36, 11, 8, 19, 52, 104, 15, 90, 116, 68, 63, 150, 117, 128, 111, 126, 105, 97, 43, 146, 1, 75, 17, 29, 140, 4, 101, 86, 22, 88, 144, 138, 110, 139, 18, 38, 96, 94, 143, 78, 125, 149, 120, 44, 123, 72, 148, 66, 106]\n"
+     ]
+    }
+   ],
    "source": [
     "# train_data 사이즈만큼의 정수값을 갖는 인덱스 리스트(indices)를 만들고 확인한다.\n",
     "num_train = len(train_data)\n",
@@ -158,9 +196,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31\n"
+     ]
+    }
+   ],
    "source": [
     "# 분할 비율(valid_size)에 해당하는 인덱스를 계산하고 확인해 본다.\n",
     "split = int(np.floor(num_train * valid_size))\n",
